<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activities -->
    <string name="app_name">OpenArchive</string>
    <string name="title_activity_main">Capture Media</string>
    <string name="title_activity_login">Login to Internet Archive</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_first_start">First Start</string>
    <string name="title_activity_view_media">View Media</string>
    <string name="title_activity_archive_metadata">Metadata</string>
    <string name="title_media_list">Uploads</string>

    <!-- General -->
    <string name="lblUpload">Upload Media</string>
    <string name="lblEditMetadata">Edit Media</string>
    <string name="lblSave">Save</string>
    <string name="loading_title">Uploading</string>
    <string name="loading_message">Please wait…</string>

    <!-- Default Values -->
    <string name="default_title">My Title</string>
    <string name="default_tags">openarchive</string>

    <!-- Alert Values -->
    <string name="alert_lbl_logout">Logout?</string>
    <string name="alert_logout">Logging out will remove all your settings but still keep your uploads.</string>

    <string name="alert_lbl_delete_media">Delete Media?</string>
    <string name="alert_media_deleted">Media successfully deleted</string>
    <string name="alert_delete_media">This media will be permanently erased.</string>

    <!-- NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_home">Home</string>
    <string name="drawer_uploads">Uploads</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_about">About</string>
    <string name="drawer_settings">Settings</string>

    <!-- EULA/Terms of Service -->
    <string name="eula_title">You agree to:</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Refuse</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_url" translatable="false"><a href="http://storymaker.cc/about/privacy/">http://storymaker.cc/about/privacy/</a></string>
    <string name="end_user_license_agreement">End User License Agreement</string>
    <string name="end_user_license_agreement_url" translatable="false"><a href="http://storymaker.cc/about/eula/">http://storymaker.cc/about/eula/</a></string>
    <string name="send_annonymous_data">Send anonymous usage data to help us improve StoryMaker.</string>
    <string name="by_clicking_accept">By clicking \'Accept\' you agree to our End User License Agreement and that you have read our Privacy Policy:</string>
    <string name="tos_dialog_title">Terms of Service</string>
    <string name="tos_dialog_msg">Please Accept our Terms of Service before continuing</string>
    <string name="tos_dialog_positive_button">Got it</string>

    <!-- FirstStartActivity -->
    <string name="sign_up_btn">Signup / Login</string>
    <string name="tos_btn">I agree to the terms of service.</string>

    <!-- MainFragment -->
    <string name="import_btn">Import</string>
    <string name="capture_btn">Capture</string>

    <string name="capture_photo">Photo</string>
    <string name="capture_video">Video</string>
    <string name="capture_audio">Audio</string>

    <!-- ViewMediaActivity -->
    <string name="iv_content_desc">Main Image</string>

    <!-- Errors -->
    <string name="error_file_not_found">File not found</string>
    <string name="error_invalid_media_type">File Type not recognized</string>
    <string name="error_no_media">No Media Found!</string>

    <!-- Server -->
    <string name="lbl_Yes">Yes</string>
    <string name="lbl_Cancel">Cancel</string>
    <string name="lbl_off">Off</string>
    <string name="lbl_on">On</string>
    <string name="lbl_ok">Ok</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_cancelled">Canceled</string>
    <string name="lbl_success">Success</string>
    <string name="lbl_continue">Continue</string>
    <string name="archive_title">Email Confirmation</string>
    <string name="archive_message">Please confirm your email and return to connect your Archive account.</string>
    <string name="archive_license_by" translatable="false"><a href="https://creativecommons.org/licenses/by/4.0/">Attribution</a></string>
    <string name="archive_license_bysa" translatable="false"><a href="https://creativecommons.org/licenses/by-sa/4.0/">Attribution-ShareAlike</a></string>
    <string name="archive_license_byncnd" translatable="false"><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Attribution-NonCommercial-NoDerivs</a></string>
    <string name="upload_to_internet_archive">Upload to Internet Archive</string>
    <string name="upload_securely_via_tor">Upload Securely via Tor</string>
    <string name="lbl_share_prefs">Sharing Preferences</string>
    <string name="problem_authticating">There was a problem authenticating with Internet Archive.</string>
    <string name="uploading_to_internet_archive">Uploading to Internet Archive...</string>
    <string name="lbl_update_value">Update Value</string>
    <string name="lbl_enter_value">Tap to enter a value.</string>
    <string name="view_published_media_online">View published media online?</string>
    <string name="title_activity_about">AboutActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="about_body"><a href="http://openarchive.org">OpenArchive</a> is a free, open-source mobile application for journalists, activists, and citizen documentarians to securely preserve their media at the Internet Archive. It sends media over Tor and offers creative commons licensing to give communities more agency over their media, respects civil liberties, and increases interoperability for researchers, scholars, and others interested in finding and reusing it in the future.\n\nOpen Archive was developed in partnership with <a href="http://scal.io">Scal.io</a>, <a href="http://storymaker.org">StoryMaker</a> and <a href="http://archive.org">Internet Archive</a> as part of the OpenArchive project with the generous support of the <a href="http://knightfoundation.org">Knight Foundation</a>.</string>

</resources>
