<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.opendasharchive.openarchive.ReviewMediaActivity">

    <ImageView
        android:id="@+id/ivMedia"
        android:contentDescription="@string/iv_content_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:maxHeight="400dp"
        android:layout_centerHorizontal="true"/>

    <TableLayout
        android:id="@+id/tblMediaMetadata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivMedia"
        android:shrinkColumns="0"
        android:stretchColumns="1">

        <include layout="@layout/include_review_media"/>

    </TableLayout>

    <Button
        android:id="@+id/btnEditMetadata"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tblMediaMetadata"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/lblEditMetadata"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnEditMetadata"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/lblUpload"
        android:textSize="14sp" />
</RelativeLayout>
</ScrollView>