<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/library"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/iarchive" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_name"
        android:textSize="38sp"
        android:alpha="1" />

    <Button
        android:id="@+id/btnImport"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:text="@string/import_btn"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnCapture"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnImport"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/capture_btn"
        android:textSize="14sp"
        android:layout_alignRight="@+id/logo"
        android:layout_alignEnd="@+id/logo"
        android:layout_alignLeft="@+id/btnImport"
        android:layout_alignStart="@+id/btnImport"/>

    <Spinner
        android:id="@+id/spCaptureOptions"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnImport"
        android:layout_toRightOf="@id/btnCapture"
        android:entries="@array/ar_media_capture_options"
        android:fontFamily="sans-serif-condensed"
        android:textSize="14sp"
        android:layout_alignRight="@+id/btnImport"
        android:layout_alignEnd="@+id/btnImport"
        android:layout_alignBottom="@+id/btnCapture"/>

</RelativeLayout>
